# tweak

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
cmake/: tweak-config.cmake.in
include/tweak/: const-math.hpp  convert.hpp  math.hpp  std.hpp  tweak.hpp
include/tweak/std/: amp.hpp  ms.hpp  percentage.hpp  speed.hpp
test/: CMakeLists.txt
test/src/: main.cpp
